# finpilot-demo

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  1.txt  =0.2.1  CLAUDE_COWORKER_ANALYSIS.md  DEPENDENCIES.md  Dockerfile  FINPILOT_GO_TO_MARKET_2026-04-22.md  FINPILOT_MORNING_TRADE_REPORT_2026-05-08.md  FINPILOT_MORNING_TRADE_REPORT_2026-05-11.md  FINPILOT_MORNING_TRADE_REPORT_2026-05-12.md  FINPILOT_MULTI_PERSPECTIVE_2026-04-22.md  FINPILOT_PRODUCTIVITY_STACK_RESEARCH_2026-05-11.md  FinPilot_Entegrasyon_Referansi.docx  FinPilot_Haftalik10_Gercekci_Degerlendirme.docx  FinPilot_Masaustu_ve_Scanner_Performans_Denetimi.docx  FinPilot_PostScan_Agent_Degerlendirme.docx  FinPilot_Scanner_Backtest_Raporu.docx  FinPilot_Sinyal_Kalitesi_ve_Konviksiyon_Raporu.docx  FinPilot_Yerel_AI_Entegrasyon_Plani.docx  FinSense_Academy_Teshis_ve_YolPlani.docx  FinSense_Academy_YerelAI_Mimari_Tasarim.docx  LIVE_COMPARISON_REPORT_2026-05-11.md  Makefile  README.md  _analyze_shortlist.py  alembic.ini  all_scan_sorted.csv  altdata.py  analyze_enriched.py  app.py  append_settings.py  audit_full_system.py  audit_v2.py  (+64 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
academy/: __init__.py  llm_provider.py  models.py  orchestrator.py  scheduler.py  seed_content.py
agents/: __init__.py  advisory.py  alert_agent.py  alpha_tracker.py  analysis_agent.py  backtest_agent.py  base.py  bear_researcher.py  bull_researcher.py  ceo.py  combo_testing.py  data_quality.py  feedback.py  market_intelligence.py  performance_monitor.py  registry.py  report_agent.py  research_agent.py  risk_agent.py  scanner_agent.py  shortlist_enricher.py  social_intelligence_agent.py  strategy_optimizer.py
api/: Dockerfile  main.py
archive/: audit_full_system.py  audit_v2.py  audit_v3.py  check_models.py  panel.py  panel_legacy.py  scanner_legacy.py  utils_legacy.py
auth/: __init__.py  core.py  database.py  db_backend.py  portfolio.py  sessions.py  streamlit_session.py  tokens.py  users.py
broker/: __init__.py
cli/: fp.py
core/: __init__.py  advisory_memory.py  agent_events.py  agent_state.py  analytics.py  audit.py  audit_log.py  auto_pipeline.py  backtest.py  cache.py  calibration.py  config.py  database.py  exceptions.py  horizon_outcomes_db.py  i18n.py  kpi_tracker.py  logging.py  macro_regime.py  monitoring.py  outcome_reconciler.py  paper_portfolio.py  pending_actions.py  pipeline.py  plugins.py  prometheus_exporter.py  quality_gate.py  rate_limiter.py  regime_weights.py  scheduler.py  services.py  session_state.py  shortlist_view.py  signal_events.py  slippage_tracker.py  social.py  tracing.py  validation.py  websocket_feeds.py
data/: FinPilot_DRL_Scanner_Analysis_Report.docx  FinPilot_Scanner_Optimization_Report.docx  ab_report_20260419_1345.md  ab_results_daily_20260419_1345.csv  ab_results_monthly_20260419_1345.csv  ab_stats_20260419_1345.json  academy.db-journal  academy_v2.db-journal  barrier_audit.json  best_params_20260416_1503.json  calibration_brier_history.json  calibration_rollback_strikes.json  catalyst_cache.json  combined_summary_20260416_1907.json  combined_top50_20260416_1907.csv  component_ablation.json  component_correlation.json  dictionary.json  dictionary_v2.json  drl_research_state.json  edge_report.html  eodhd_client.py  executive_summary_20260416_1503.md  experiments_results_20260416_1503.csv  finpilot.db  finpilot_weekly_report_20260506_1557.json  finpilot_weekly_report_20260506_1557.md  finpilot_weekly_report_20260506_1558.json  finpilot_weekly_report_20260506_1558.md  finpilot_weekly_report_20260506_1559.json  finpilot_weekly_report_20260506_1559.md  finpilot_weekly_report_20260511_1249.json  finpilot_weekly_report_20260511_1249.md  inference.json  macro_regime.json  meta_labeler.json  momentum_turnover_sort.json  offline_ablation.json  onboarding_status.json  openclaw_manifest_20260416_1503.yaml  (+21 more)
docs/: ACADEMIC_DRL_ANALYSIS.md  CORE_MIGRATION_GUIDE.md  CRITICAL_ISSUES_DETAILED.md  CRITICAL_ROADMAP.md  DEMO_DEPLOYMENT.md  DEMO_TO_REAL_ROADMAP.md  DGX_SPARK_EVALUATION.md  DRL_AGENT_ANALYSIS.md  DRL_COMPREHENSIVE_ANALYSIS.md  DRL_IMPROVEMENT_ROADMAP.md  DRL_PARALLEL_TESTING_GUIDE.md  DRL_WORKFLOW_ALTERNATIF.md  FINANZPLAN_AWS_GRUENDUNGSFONDS.md  FINPILOT_EVOLUTION_TIMELINE.md  FINPILOT_PROFESSIONAL_ANALYSIS_JAN2026.md  FULL_AUDIT_REPORT.md  GAP_ANALYSIS_REPORT.md  HIBE_FON_DEGERLENDIRME.md  INFRASTRUCTURE_ACCELERATION_ROADMAP.md  INTEGRATION_PLAN.md  KULLANIM-KILAVUZU.md  PAPER_TRADING_GUIDE.md  PROJECT_ANALYSIS_PRESENTATION.md  PROJECT_ANALYSIS_PROFESSIONAL.md  ROADMAP_Q1_2025.md  TRIO_IMPROVEMENT_ROADMAP.md  UI_UX_APPLE_STYLE_ROADMAP.md  drl_entegrasyon_degerlendirme.md  drl_next_steps.md  drl_sprint1_completion_report.md  etl_sprint2.md  feature_flags.md  feature_importance_sprint5.md  feature_sprint3.md  feature_store_sprint4.md  finanzplan_aws_gruendungsfonds.html  finpilot_effort_summary.md  gap_analysis_v3.md  ideas.md  index.md  (+5 more)
drl/: __init__.py  alignment_helpers.py  backtest_engine.py  callbacks.py  config.py  data_loader.py  ensemble_router.py  feature_generators.py  feature_pipeline.py  fundamentals.py  hybrid_engine.py  inference.py  logging_config.py  market_env.py  model_registry.py  multi_asset_env.py  observability.py  optuna_search.py  persistence.py  portfolio_optimizer.py  rate_limiter.py  report_generator.py  sentiment.py  specialists.py  train_private.py  training.py
grant_documents/: .~lock.FinPilot_AILab_Analiz_TR.pdf#  .~lock.FinPilot_Dashboard_Analysis_TR.pdf#  .~lock.FinSense_Sozluk_Yol_Haritasi.pdf#  FinPilot_AILab_Analiz_TR.docx  FinPilot_Business_Plan_EN.docx  FinPilot_Businessplan_DE.docx  FinPilot_Dashboard_Analysis_TR.docx  FinPilot_Executive_Summary_EN.docx  FinPilot_Financial_Projections_EN.docx  FinPilot_Is_Plani_TR.docx  FinPilot_Kurzprofil_DE.docx  FinPilot_Market_Analysis_EN.docx  FinPilot_Marktanalyse_DE.docx  FinPilot_Pazar_Analizi_TR.docx  FinPilot_Yonetici_Ozeti_TR.docx  FinSense_Sozluk_Yol_Haritasi.docx  (+1 more)
(+992 files in other folders)
