[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scanner", "drl", "core", "auth", "views", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "S",     # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert
    "T201",   # print() — allowed in CLI tools
    "B008",   # function call in default arg (Streamlit pattern)
    "S603",   # subprocess call
    "S607",   # partial path
    "S110",   # try-except-pass (intentional in many scanner/data flows)
    "S112",   # try-except-continue (intentional in batch processing)
    "S311",   # pseudo-random (not used for crypto here)
    "S324",   # md5 (used for cache keys, not security)
    "SIM102", # nested if (often more readable)
    "SIM108", # ternary (multi-line if/else often more readable)
    "SIM113", # enumerate for counter (explicit counter sometimes clearer)
    "SIM103", # return negated condition directly
    "SIM105", # contextlib.suppress
    "SIM115", # context manager for open
    "SIM117", # combined with statements
    "E402",   # import order (needed for sys.path manipulation)
    "B024",   # abstract base class without abstract methods (design choice)
    "B027",   # empty method in ABC without abstract decorator (hook pattern)
    "B039",   # mutable ContextVar default
    "UP007",  # X | Y union syntax (compat with older type checkers)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T201", "S106", "S104", "S105", "B017", "SIM117"]
"scripts/*" = ["T201", "E402", "S104", "S608"]
"views/*" = ["E731"]
"archive/*" = ["E722", "B904", "F821", "S105", "S106", "T201", "E402", "S104", "S608", "F401", "F841", "S107", "S301", "S110", "S311", "S404", "S603", "S607"]
"core/prometheus_exporter.py" = ["S104"]
"core/audit.py" = ["S105"]
"drl/observability.py" = ["S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

# ─────────────────────────────────────────────────────────────────────
# Sprint 16 (S16-08): [project] block + optional extras.
#
# Note: production installs still use requirements*.txt files (referenced
# by Dockerfile, docker-compose.yml, CI). This block is additive — it
# enables `pip install -e .[observability]` / `[etl]` / etc. for dev,
# without changing existing pipeline behavior. See DEPENDENCIES.md for
# the requirements file mapping.
# ─────────────────────────────────────────────────────────────────────
[project]
name = "finpilot"
version = "0.16.0"
description = "AI-powered stock scanning and analysis with closed-loop calibration"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
observability = [
    "mlflow>=2.9,<3.0",
    "prometheus-client>=0.20,<0.21",
    "psutil>=5.9,<6.0",
    "redis>=5.0,<6.0",
    "sentry-sdk>=1.38,<2.0",
]
etl = [
    "prefect>=2.14,<2.16",
    "pydantic>=2.7,<3.0",
    "great-expectations>=0.18,<0.19",
    "pyarrow>=15.0,<16.0",
]
rl = [
    "stable-baselines3[extra]>=2.2,<3.0",
    "shimmy>=2.0,<3.0",
    "shap>=0.45,<0.46",
    "scikit-learn>=1.5,<1.6",
]
altdata = [
    "httpx>=0.27,<0.28",
    "tenacity>=8.2,<9.0",
    "aiolimiter>=1.1,<1.2",
    "duckduckgo-search",
    "google-generativeai",
]
demo = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.36",
    "plotly>=5.18.0",
]
full = [
    "finpilot[observability,etl,rl,altdata,demo]",
]

[project.scripts]
fp = "cli.fp:main"
